[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
nostr-sdk = { version="0.19", features = ["blocking", "all-nips"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_yaml = "0.8"
chrono = { version = "0.4.23", features = ["serde"] }
time = "0.3.20"
serde_json = "1.0.94"
r2d2 = "0.8.10"
mysql = "23.0.1"
r2d2_mysql = "23.0.0"
thiserror = "1.0.39"
